--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,10 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
+AUTH_SECRET="secretauththing"
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="CLOUD NAME"
+NEXT_PUBLIC_CLOUDINARY_API_KEY="API KEY"
+
+CLOUDINARY_API_SECRET="API SECRET"
